<resources>
    <string name="app_name">Mr Delivery</string>
    <string name="facebook_app_id">145423793536029</string>
    <string name="fb_login_protocol_scheme">fb145423793536029</string>
    <string name="create_account">Create Account</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name_hint">Full Name</string>
    <string name="e_mail_hint">E-mail</string>
    <string name="mobile_number_hint">Mobile Number</string>
    <string name="delivery_guy_hint">Register as a Delivery Guy</string>
    <string name="login_id">Login</string>
    <string name="e_mail_id">E-mail</string>
    <string name="remember_me_id">Remember Me</string>
    <string name="forgot_password_id"><u>Forgot Password</u></string>
    <string name="reset_pw_email">Send password reset Email</string>
    <string name="join_now">Join Now</string>
    <string name="login_str">Already have an Account? Login</string>
</resources>
