<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".RegisterActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/full_name_hint"
        android:textColorHint="#FF4081"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_name_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:textColorHighlight="#FF4081"
            android:textColorHint="#FF4081"
            android:textColorLink="#FF4081"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar2" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/buttons"
        android:padding="20dp"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/register_mobilenumber_input"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/register_password_input"
        style="@style/Material"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textAlignment="textStart"
        android:textColorHighlight="#FF4081"
        android:textColorHint="#FF4081"
        android:textColorLink="#FF4081"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextField"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/register_confirmpassword_input"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/retype_password_hint"
        android:inputType="textPassword"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textColorHighlight="#FF4081"
        android:textColorHint="#FF4081"
        android:textColorLink="#FF4081"
        app:layout_constraintTop_toBottomOf="@+id/register_password_input"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/register_email_input"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/e_mail_hint"
        android:inputType="textEmailAddress"
        android:textColorHighlight="#FF4081"
        android:textColorHint="#FF4081"
        android:textColorLink="#FF4081"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_confirmpassword_input" />

    <EditText
        android:id="@+id/register_mobilenumber_input"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/mobile_number_hint"
        android:inputType="phone"
        android:textColorHighlight="#FF4081"
        android:textColorHint="#FF4081"
        android:textColorLink="#FF4081"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email_input" />

    <CheckBox
        android:id="@+id/delivery_rad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery_guy_hint"
        android:textColor="#FF4081"
        android:textColorHighlight="#FF4081"
        android:textColorLink="#FF4081"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/register_btn"
        tools:layout_editor_absoluteX="71dp" />

</androidx.constraintlayout.widget.ConstraintLayout>